--- a/package.json
+++ b/package.json
@@ -1,12 +1,42 @@
 {
-  "name": "openshift-cartridge-nodejs-template",
-  "version": "1.0.1",
-  "description": "Custom Node.js cartridge for OpenShift - sample application",
-  "private": true,
-  "main": "start.js",
+  "name": "chspe-server",
+  "version": "1.0.0",
+  "description": "Server side api and interface for the CHSPE app",
+  "main": "app.js",
   "scripts": {
-    "start": "node --use_strict start.js"
+    "start": "node app"
   },
-  "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
-  "license": "ISC"
+  "author": "Michael Robertson",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "cloudinary": "^1.4.3",
+    "express": "^4.14.0",
+    "express-busboy": "^4.0.0",
+    "jwt-simple": "^0.5.0",
+    "moment": "^2.15.1",
+    "moment-timezone": "^0.5.5",
+    "mongodb": "^2.2.10",
+    "mongoose": "^4.6.2",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
+    "react-cookie": "^0.4.8",
+    "rmdir": "^1.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "node-sass": "^3.10.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2"
+  }
 }
