--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment-timezone": "^0.5.5",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.2",
+    "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
